--- a/css/Homepagina.css
+++ b/css/Homepagina.css
@@ -2,8 +2,19 @@ body
 {
     font-family: arial;
     color: white;
-    background-color: #161313;
     background: #161313;
+}
+#bg1
+{
+    background-color: #161313;
+}
+#bg2
+{
+    background-color: #09014e;
+}
+#bg3
+{
+    background-image: url("../img/background.png"); 
 }
 a:link
 {
@@ -48,8 +59,9 @@ p.edge3
     text-align: center;
     width: 1000px;
 }
-h1.edge
+header.edge
 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 45px;
     color: black;
     background: aqua;
@@ -70,7 +82,7 @@ h4.edge
     border-radius: 7px;
     text-align: center;
 }
-h5.edge
+footer.edge
 {
     font-size: 25px;
     color: white;
@@ -92,7 +104,7 @@ h6.edge
     border-radius: 7px;
     text-align: center;
 }
-h6.edge2
+main.edge
 {
     font-size: 20px;
     color: black;
@@ -143,6 +155,7 @@ ul.edge
     border: 1px solid;
     border-radius: 7px;
     text-align: center;
+    list-style-type: none;
 }
 ol.edge
 {
@@ -172,6 +185,15 @@ audio.edge
     border-radius: 70px;
     align-items: center;
 }
+video.edge
+{
+    background: lime;
+    margin: 15px 15px 15px 15px;
+    padding: 15px 15px 15px 15px;
+    border: 5px black solid;
+    border-radius: 70px;
+    align-items: center;
+}
 #menu
 {
   list-style-type: none;
@@ -185,72 +207,26 @@ audio.edge
   text-decoration: none;
   background-color: rgb(1, 140, 1);
   font-family: Arial;
-  text-align: center;
-}
-#menu
-{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-#menu a
-{
-  color: #FFFFFF;
-  text-decoration: none;
-  background-color: rgb(1, 140, 1);
-  font-family: Arial;
   width: 317px;
   padding: 15px 30px;
   margin-bottom: 0px;
   display: block;
+  text-align: center;
 }
 #menu a:hover
 {
   background-color: rgb(0, 65, 0);
 }
-nav
-{
-     margin: 0;
-     padding: 0;
-}
-nav a
-{
-     color: #FFFFFF;
-     text-decoration: none;
-     background-color: #003366;
-     font-family: Arial, sans-serif;
-     width: 100px;
-     padding: 2px 4px;
-     margin-bottom: 1px;
-     display: block;
-     list-style-type: none;
-}
-nav a:hover
-{
-     background-color: #336699;
-     color:#FFFFFF;
-}	
-nav ul
-{
-     list-style-type: none;
-     margin: 0;
-     padding: 0;
-}
-nav li
+#menu li
 {
      float: left;
      background-color:#003366;
      min-width:100px;
 }
-nav ul li ul
+#canvas
 {
-     display: none;
-}
-nav ul li ul li
-{
-     float: none;
-}
-nav ul li:hover ul
-{
-     display: block;
+    background: #00b652;
+    border: 1px solid;
+    margin: 15px 15px 15px 15px;
+    padding: 15px;
 }
